# bankserver

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  main.rs
src/data/: bank_repo.rs  mod.rs
src/domain/: mod.rs
src/infrastructure/: config.rs  logging.rs  mod.rs
src/presentation/: api_errors.rs  api_routes.rs  mod.rs  routes.rs
