[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0"
async-trait = "0.1"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }

